--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,4 +12,7 @@ RUN dotnet publish -c Release -o out
 FROM mcr.microsoft.com/dotnet/aspnet:8.0-nanoserver-1809@sha256:6c4df091e4e531bb93bdbfe7e7f0998e7ced344f54426b7e874116a3dc3233ff
 WORKDIR /backend
 COPY --from=build-env /backend/out .
+
+EXPOSE 80
+
 ENTRYPOINT ["dotnet", "backend.dll"]
